[package]
name = "queryst"
version = "2.1.1-alpha.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
description = "Rust query string parser with nesting support, forked to update Serde"
repository = "https://github.com/rustless/queryst"
keywords = ["json", "web", "url", "parser"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["regex1"]
regex1 = ["regex", "lazy_static"]

[dependencies]
serde = "^1"
serde_json = "^1"
percent-encoding = "^2"
regex = { version = "^1", optional = true }
lazy_static = { version = "^1", optional = true }
